Updated Build + Setup

--- a/kcah2ing/Makefile
+++ b/kcah2ing/Makefile
@@ -2,7 +2,7 @@
 DIRS  = $(shell ls -p | grep "/")
 
 all:
-	@$(foreach DIR, $(DIRS), cd $(DIR) && make all && cd ..;)
+	@$(foreach DIR, $(DIRS), cd $(DIR) && make build && cd ..;)
 
 clean:
 	@$(foreach DIR, $(DIRS), cd $(DIR) && make clean && cd ..;)
