Fixes to printf format (Addressed Warnings)

--- a/kcah2ing/Makefile
+++ b/kcah2ing/Makefile
@@ -4,5 +4,8 @@ DIRS  = $(shell ls -p | grep "/")
 all:
 	@$(foreach DIR, $(DIRS), cd $(DIR) && make build && cd ..;)
 
+run-all:
+	@$(foreach DIR, $(DIRS), cd $(DIR) && make run && cd ..;)
+
 clean:
 	@$(foreach DIR, $(DIRS), cd $(DIR) && make clean && cd ..;)
