WIP + Tidy Up of CMakefile.txt

--- a/kcah2ing/CMakeLists.txt
+++ b/kcah2ing/CMakeLists.txt
@@ -10,8 +10,6 @@ add_executable(firstprog-exe ${FIRSTPROG_SRC}/firstprog.c)
 
 set(STRINGS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/strings)
 add_executable(char_array-exe ${STRINGS_SRC}/char_array.c)
-
-set(STRINGS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/strings)
 add_executable(char_array2-exe ${STRINGS_SRC}/char_array2.c)
 
 set(SIGNEDUNSIGNEDLONGSHORT_SRC ${CMAKE_CURRENT_SOURCE_DIR}/signedunsignedlongshort)
@@ -19,9 +17,14 @@ add_executable(datatype_sizes-exe ${SIGNEDUNSIGNEDLONGSHORT_SRC}/datatype_sizes.
 
 set(MEMORYLOCATIONS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/memorylocations)
 add_executable(pointer-exe ${MEMORYLOCATIONS_SRC}/pointer.c)
-
-set(MEMORYLOCATIONS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/memorylocations)
 add_executable(addressof-exe ${MEMORYLOCATIONS_SRC}/addressof.c)
-
-set(MEMORYLOCATIONS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/memorylocations)
 add_executable(addressof2-exe ${MEMORYLOCATIONS_SRC}/addressof2.c)
+
+set(FORMATSTRINGS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/formatstrings)
+add_executable(fmt_strings-exe ${FORMATSTRINGS_SRC}/fmt_strings.c)
+add_executable(input-exe ${FORMATSTRINGS_SRC}/input.c)
+
+set(TYPECASTING_SRC ${CMAKE_CURRENT_SOURCE_DIR}/typecasting)
+add_executable(input-exe ${TYPECASTING_SRC}/typecasting.c)
+add_executable(input-exe ${TYPECASTING_SRC}/pointer_types.c)
+
