Added de la Rouille to C through CMake (Now using Rust Workspaces)

--- a/LaRouille/rusty_common/Cargo.toml
+++ b/LaRouille/rusty_common/Cargo.toml
@@ -1,10 +1,5 @@
-[package]
-name = "rusty_common"
-version = "0.1.0"
-authors = ["outcastgeek <outcastgeek+git@gmail,com>"]
+[workspace]
 
-[lib]
-name = "rusty_common"
-crate-type = ["staticlib"]
-
-[dependencies]
+members = [
+    "rust_math",
+]
