--- a/TourCpp2/CMakeLists.txt
+++ b/TourCpp2/CMakeLists.txt
@@ -4,6 +4,7 @@ project(TourCpp2)
 cmake_minimum_required(VERSION 3.3)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
 set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
