--- a/Tinkering/.gitignore
+++ b/Tinkering/.gitignore
@@ -1,4 +1,10 @@
 # Created by .ignore support plugin (hsz.mobi)
+
+### Module
+
+*.zip
+libtorch
+
 ### Autotools template
 # http://www.gnu.org/software/automake
 
